--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,9 @@
   <font size=6>
     <br>
     <br>
-  <b><a style="font-size:20px;font-family:verdana;color:#555">data science</a><br>mini-portfolio</b><br>
-  <font size=2.8>
+  <b><a style="font-size:5;font-family:verdana;color:#555">data science</a><br>
+		<font size=4>mini-portfolio</b><br>
+  <font size=2.5>
 
 Below are a selection of Jupyter Notebooks (in html format) showcasing some climate/environment data science exercises which I've worked on over the past few years. They're designed to be brief and intended to illustrate my coding and statistics skills.
 </p>
@@ -67,7 +68,7 @@ document.write(document.lastModified);
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="portfolio.html"><b>Data science (mini) portfolio</b></a></li>
+		<li><a href="portfolio.html"><b>Data Science</b></a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="ships.html">Ship and Field</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
