--- a/ships.html
+++ b/ships.html
@@ -109,7 +109,7 @@ Same as above... but a little further south.
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="portfolio.html">Data science (mini) portfolio</a></li>
+		<li><a href="portfolio.html">Data Science</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="ships.html"><b>Ship and Field</b></a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
