--- a/skills.html
+++ b/skills.html
@@ -2,109 +2,153 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<body bgcolor="#FFFFFF" text="#000000" link="#900000" vlink="#680000" alink="#F00000">
-<meta http-equiv="Content-Type" content="text/html; charset=mule-utf-8-unix">
-<meta name="description" content="Aidan Starr's Publications">
-<meta name="Author" content="Aidan Starr">
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>Aidan Starr</title>
+	<body bgcolor="#FFFFFF" text="#000000" link="#900000" vlink="#680000" alink="#F00000">
+		<meta http-equiv="Content-Type" content="text/html; charset=mule-utf-8-unix">
+		<meta name="description" content="Aidan Starr's homepage">
+		<meta name="Author" content="Aidan Starr">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
+
+		# title
+		<title>Skills</title>
 	</head>
 	<body>
-<main style=top:0%;>
-<div class="innertube">
-  <p class='body'>
-  <font size = 5em;><b>What can I do?</b><br>
-  <font size = 3em;>
-	<ul style="list-style-type:none; line-height:2.5">
-		<font color = #555>
-				<li><b>In the office you can find me working with:</b></li>
-	<ul style="list-style-type:disc; line-height:1.5">
-		<li> Chronostratigraphy: Constructing age-depth models for sediment cores by a variety of approaches, classical and novel</li>
-		<li> <span class="latex">MATLAB</span>: 8+ Years experience using Matlab for data analysis, statistics, visualisation</li>
-		<li> Python: The majority of my data analysis happens in Python (Jupyter, NumPy, Pandas, Xarray, Seaborn, Matplotlib, etc...)</li>
-		<li> R: I also do much of my time series analysis in R, with the help of packages such as Astrochron and GeochronR.</li>
-		<li> Ocean Data View for visualising oceanographic data </li>
-		<li> <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>: Typsetting documents in the tex language</li>
-	</ul>
+		<main>
+			<div class="innertube">
+				<p class='header'>
+					<font size=6>
+						<br>
+						<br>
+						<b>My skills</b><br>
+					</p>
+					<hr>
+					<p class='body'>
+						<font size = 4.5>
+							<font color = #555>
+								<b>Data Science</b><br>
+								<font size = 3.5>
+								<ul style="list-style-type:none; line-height:1.25">
+									<li><img src="doc/py_logo.png" height="20" display="flex"> <b> Python </b><br>
+										<font size = 2.5>
+											4+ years of near-daily Python use, mostly in Jupyter notebooks. My standard imports include: <ul style="list-style-type:none; line-height:1">
+												<li><p style="font-family:'Lucida Console', monospace">> numpy, pandas, matplotlib, scipy #for routine operations </p></li>
+												<li><p style="font-family:'Lucida Console', monospace">> scikit-learn, statsmodels, seaborn #for statistical stuff </p></li>
+												<li><p style="font-family:'Lucida Console', monospace">> geopandas, rasterio, xarray, cartopy, pyproj #for geospatial analysis </p></li>
+												<li><p style="font-family:'Lucida Console', monospace">> holoviews, folium, plotly #for interactive plotting </p></li>
+											</ul>
+											<br>
+											<font size = 3.5>
+												<li> <img src="doc/matlab.png" height="20" display="flex"> <b> Matlab </b><br>
+													<font size = 2.5>
+														8+ years of Matlab experience. Used primarily for oceanography/hydrographic survey purposes as numerical simulations. I've used Matlab much less frequently since switching to Python for my daily analysis tool.
+													</li>
+													<br>
+													<font size = 3>
+														<li> <img src="doc/R_logo.jpeg" height="20" display="flex"> <b> R </b><br>
+															<font size = 2.5>
+																8+ years of semi-regular R use, mostly for time series analysis and statistical modelling. In particular, I use R for spectral analysis and filtering.
+															</li>
+															<br>
 
-	In general, I try to take a <i>data science</i> inspired approach to work. You can find much of my code and data on Github.
+															<font size = 3.5>
+																<li> <b> Also in my data science toolkit:</b> <ul style="list-style-type:none; line-height:1.5">
+																	<font size = 2.5>
+																	<li> <img src="doc/qgis_logo.png" height="25" display="flex">QGIS<br></li>
+																	<li> <img src="doc/linux_logo.jpeg" height="25" display="flex">  Linux<br></li>
+																	<li> <img src="doc/sqllogo.png" height="20" display="flex"> SQL<br>
+																		<li> <img src="doc/githublogo.png" height="20" display="flex"> Github<br>
+																		</ul>
+																	</ul></p>
+
+
+																	<hr>
 <br>
-	<li> <img src="doc/powerby.png" height="240"> <img src="doc/skills7.gif" height="240">
-<br>
-
-	<li><b>I like to make numbers into other numbers with:</b></li>
-	<ul style="list-style-type:disc; line-height:1.5">
-	  <li> Time Series Analysis: Analysing regularly- and irregularly-spaced data in the frequency domain (Blackman-Tukey, Lomb-Scargle, SSA, Wavelet Analysis, Multi-Taper Method, ARIMA modelling, etc.)</li>
-		<li> Novel numerical approaches to explore paleoclimate datasets </li>
-		<li> Age-uncertain statistics (using age ensemble age models, for example) </li>
-	</ul>
-
-	<li><b>My primary lab-based activities include:</b></li>
-	<ul style="list-style-type:disc; line-height:1.5">
-		<li> Washing and seiving of marine sediments for paleoclimate analysis</li>
-		<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X) - <i>Currently in the process of setting up a "Sortable Silt" protocol at Rutgers Unviersity</i> </li>
-		<li> Identification and picking of Neogene Foraminifera (planktic and benthic)</li>
-		<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV])</li>
-		<li> Identification and counting of ice-rafted Debris, pyrite, volcanic ash, and other sand-sized entities in marine sediment (light microscope and SEM)</li>
-	</ul>
-
-I also have some experience with measuring bulk chemistry (XRF and ICP-OES) and less common isotope systems (e.g. He) in marine sediments.
-	<li><img src="doc/skills1.jpeg" height="140"> <img src="doc/skills3.jpeg" height="140"> <img src="doc/skills2.jpeg" height="140">
-
-<br>
-</ul>
+																	<p class='body'>
+													<font size = 4.5>
+														<font color = #555>
+															<b>Analytical and Lab</b><br>
+															<font size = 3.5>
+															<ul style="list-style-type:none; line-height:2">
+																<li><b> Paleoclimate and sedimentology lab techniques </b><br>
+																	<img src="doc/skills2.jpeg" height="120"> <img src="doc/skills1.jpeg" height="120"> <img src="doc/skills5.jpg" height="120">
 
 
-	</ul>
-	</ul>
+																	<font size = 2.5>
+																		<ul style="list-style-type:disc; line-height:2">
+																			<li> Sediment core description and sampling</li>
+																			<li> Sediment grain size analysis (Coulter Counter, Malvern MultiSizer X)</li>
+																			<li> Identification and picking of Neogene Foraminifera</li>
+																			<li> Stable isotope analysis of calcite (Thermo MAT 253 [Kiel IV])</li>
+																			<li> Identification and counting of ice-rafted Debris, pyrite, volcanic ash, and other entities in sediment (light microscope and SEM)</li>
+																		</ul>
+																	</li>
+																		<font size = 3.5>
+																			<br>
 
-	</ul>
-
-</p>
-
-<p class='header'>
-<font size = 1>
-  Last modified:
-<script>
-document.write(document.lastModified);
-</script>
-</p>
-
-</main>
-
-
-<nav id="nav">
-<div class="innertube">
-  <font size = 2.5>
-		<img src="doc/g2194.png" width=250 id="logo" left=-50px>
-  <ul style="margin-bottom: 10px">
-		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="index.html">Home</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="skills.html"><b>Skills</b></a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="portfolio.html">Data science (mini) portfolio</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="ships.html">Ship and Field</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-    <li><a href="publications.html">Publications</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="teaching.html">Teaching and Outreach</a></li>
-		<hr style="width:80%;text-align:left;margin-left:0">
-
-		</li>
-  </ul>
-
-<br>
-<br>
-</div>
-</nav>
+																		<li><b> Oceanography and hydrography </b><br>
+																			<font size = 2.5>
+																				<ul style="list-style-type:disc; line-height:2">
+																					<li> Processing and visualising bathymetry data</li>
+																					<li> CTD casts and data processing</li>
+																					<li> Ocean model and reanalysis data processing</li>
+																				</ul>
+																			</li>
 
 
-</body>
-</html>
-</title>
-</head>
-<body>
+																	</ul>
 
-</body> </html>
+
+
+
+
+
+
+
+																				<p class='header'>
+																					<font size = 1>
+																						Last modified:
+																						<script>
+																						document.write(document.lastModified);
+																						</script>
+																					</p>
+																				</main>
+
+																				<nav id="nav">
+																					<div class="innertube">
+																						<font size = 2.5>
+																							<img src="doc/g2194.png" width=250 id="logo" left=-50px>
+																							<ul style="margin-bottom: 10px">
+																								<hr style="width:80%;text-align:left;margin-left:0">
+																								<li><a href="index.html">Home</a></li>
+																								<hr style="width:80%;text-align:left;margin-left:0">
+																								<li><a href="skills.html"><b>Skills</b></a></li>
+																								<hr style="width:80%;text-align:left;margin-left:0">
+																								<li><a href="portfolio.html">Data Science</a></li>
+																								<hr style="width:80%;text-align:left;margin-left:0">
+																								<li><a href="ships.html">Ship and Field</a></li>
+																								<hr style="width:80%;text-align:left;margin-left:0">
+																								<li><a href="publications.html">Publications</a></li>
+																								<hr style="width:80%;text-align:left;margin-left:0">
+																								<li><a href="teaching.html">Teaching and Outreach</a></li>
+																								<hr style="width:80%;text-align:left;margin-left:0">
+																							</li>
+																						</ul>
+
+																						<br>
+																						<br>
+																						<br>
+																						<br>
+																						<br>
+																						<br>
+
+																					</div>
+																				</nav>
+
+																			</body>
+																			</html>
+																		</title>
+																	</head>
+																	<body>
+
+																	</body> </html>
