--- a/index.html
+++ b/index.html
@@ -8,39 +8,44 @@
 <meta name="Author" content="Aidan Starr">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
+
+
+# title
 <title>Aidan Starr</title>
 	</head>
 	<body>
 <main>
 <div class="innertube">
   <p class='header'>
-  <img src="doc/im1.jpg" height="190">
+  <img src="doc/profilepic.jpeg" height="190">
   <font size=6>
     <br>
     <br>
   <b>Dr. Aidan Starr</b><br>
-  <font size=2.5>
-  Research Associate in <b>Paleoceanography</b><br>
+  <font size=3.5>
+  Climate & Data Science.<br>
+	Research Associate in Paleoceanography.<br>
+	<br>
+    </p>
+		<hr>
+  <p class='body'>
+      <br>
+		<font size = 3.5>
+	<b>About me</b><br>
+	<font size = 2.5>
+	I am an interdisciplinary scientist who uses <b><span style="color: #CC3C00">data science</span></b> and analytical approaches to better understand the <b><span style="color: #CC3C00">trajectory of the Earth system</span></b> under different forcing conditions. I have authored or coauthored 6 peer-reviewed articles in world-leading journals (Nature, Science, etc.) and my research has been cited over 70 times.	<p>
+<br>
+
+<hr>
+
+<p class='body'>
+	<font size = 2.5>
   <i class="fa fa-graduation-cap" aria-hidden="true"></i> Department of Marine and Coastal Sciences, <a href="https://marine.rutgers.edu/" target="_blank">Rutgers University </a><br>
   <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/boyd1aDBu2avi2859" target="_blank">Cook/Douglas Campus, Rutgers University, New Brunswick, NJ, USA </a><br>
   <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:aidan.m.starr@gmail.com"> aidan.m.starr@gmail.com </a> / or / <a href = "mailto:aidan.starr@marine.rutgers.edu"> aidan.starr@marine.rutgers.edu </a><br>
-  <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv_4page.pdf" target="_blank">CV</a> <br>
-	<i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
-	<i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/AidanStarr" target="_blank">GitHub</a> <br>
-  </p>
-  <p class='body'>
-    <font size = 2.5>
-      <br>
-	<b>About me:</b><br>
-	I'm a Climate Scientist specialising in carbon cycle dynamics and paleoclimatology. Currently a Research Associate at Rutgers University, NJ, working under Prof. Liz Sikes on reconstructing Indian Ocean circulation and carbon cycle processes during the last glacial cycle. Previously I worked as a PDRA in Prof. Ian Hall's lab at Cardiff University. I trained as an Oceanographer (MSci from Southampton University) before turning my interest towards ocean-climate interactions during the Plio-Pleistocene. In early 2022 I was awarded a PhD for my thesis titled `Surface and Deep Hydrography across the Mid-Pleistocene Transition; Multi-proxy paleoceanographic reconstructions from the Southwest Indian Ocean'.
-	<p>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/XVtxxum8fqY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
-
-<br>
-<br>
+  <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv.pdf" target="_blank">CV</a> <br>
+  <i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
+  <i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/AidanStarr" target="_blank">GitHub</a> <br>
 
 
 <p class='header'>
@@ -62,7 +67,7 @@ document.write(document.lastModified);
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="portfolio.html">Data science (mini) portfolio</a></li>
+		<li><a href="portfolio.html">Data Science</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="ships.html">Ship and Field</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
