--- a/publications.html
+++ b/publications.html
@@ -106,7 +106,7 @@ document.write(document.lastModified);
 		<hr style="width:80%;text-align:left;margin-left:0">
     <li><a href="skills.html">Skills</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
-		<li><a href="portfolio.html">Data-science (mini) portfolio</a></li>
+		<li><a href="portfolio.html">Data Science</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
 		<li><a href="ships.html">Ship and Field</a></li>
 		<hr style="width:80%;text-align:left;margin-left:0">
