minor tweaks to homepage'

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<font size = 3.5>
 	<b>About me</b><br>
 	<font size = 2.5>
-	I am an interdisciplinary scientist who uses <b><span style="color: #CC3C00">data science</span></b> and analytical approaches to better understand the <b><span style="color: #CC3C00">trajectory of the Earth system</span></b> under different forcing conditions. I have authored or coauthored 6 peer-reviewed articles in world-leading journals (Nature, Science, etc.) and my research has been cited over 70 times.	<p>
+	I am an interdisciplinary paleoclimate scientist who uses data science and analytical approaches to better understand the <b><span style="color: #CC3C00">trajectory of the Earth system</span></b> under different forcing conditions. I have authored or coauthored 6 peer-reviewed articles in world-leading journals (Nature, Science, etc.) and my research has been cited over 70 times.	<p>
 <br>
 
 <hr>
@@ -43,7 +43,7 @@
   <i class="fa fa-graduation-cap" aria-hidden="true"></i> Department of Marine and Coastal Sciences, <a href="https://marine.rutgers.edu/" target="_blank">Rutgers University </a><br>
   <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/boyd1aDBu2avi2859" target="_blank">Cook/Douglas Campus, Rutgers University, New Brunswick, NJ, USA </a><br>
   <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:aidan.m.starr@gmail.com"> aidan.m.starr@gmail.com </a> / or / <a href = "mailto:aidan.starr@marine.rutgers.edu"> aidan.starr@marine.rutgers.edu </a><br>
-  <i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv.pdf" target="_blank">CV</a> <br>
+  <!--<i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv.pdf" target="_blank">CV</a> <br>-->
   <i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
   <i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/AidanStarr" target="_blank">GitHub</a> <br>
 
