added climatedecomposer link and description

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,12 +21,18 @@
 		<font size=4>mini-portfolio</b><br>
   <font size=2.5>
 
-Below are a selection of Jupyter Notebooks (in html format) showcasing some climate/environment data science exercises which I've worked on over the past few years. They're designed to be brief and intended to illustrate my coding and statistics skills.
+Below are a selection of climate and environmental data science projects/exercises which I've worked on over the past few years. They're designed to be brief and intended to illustrate my coding and statistics skills.
 </p>
 
 <hr>
 
 <ol>
+	<li><a href="https://aidanstarr-climatedecomposer-app-jlvvxe.streamlit.app/" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>ClimateDecomposer - Singular Spectrum Analysis web app **click to open**</b></p><img src="doc/climatedecomp.png" width=600 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: time series analysis; python; streamlit app; interactive dashboard</a></i></span></a></li>
+
+  <br>
+	<br>
+	<hr>
+
   <li><a href="port/ice_age_ocean.html" target="_blank" style="font-size:17px;font-family:verdana;color:#555; text-decoration: none"><b>How cold was the ice age ocean? **click to open**</b></p><img src="doc/iceageocean.png" width=200 left=-50px><br><span><i><a style="font-size:11px;font-family:verdana;color:#555">tags: netcdf; xarray; geospatial; climate model; CMIP</a></i></span></a></li>
 
   <br>
