--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 <p class='body'>
 	<font size = 2.5>
-  <i class="fa fa-graduation-cap" aria-hidden="true"></i> Department of Marine and Coastal Sciences, <a href="https://marine.rutgers.edu/" target="_blank">Rutgers University </a><br>
-  <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/boyd1aDBu2avi2859" target="_blank">Cook/Douglas Campus, Rutgers University, New Brunswick, NJ, USA </a><br>
-  <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:aidan.m.starr@gmail.com"> aidan.m.starr@gmail.com </a> / or / <a href = "mailto:aidan.starr@marine.rutgers.edu"> aidan.starr@marine.rutgers.edu </a><br>
+  <i class="fa fa-graduation-cap" aria-hidden="true"></i> Department of Geography, <a href="https://www.geog.cam.ac.uk/" target="_blank">University of Cambridge </a><br>
+  <i class="fa fa-map-marker" aria-hidden="true"></i> <a href = "https://goo.gl/maps/oBnDHpSgYisNvPRR9" target="_blank">University of Cambridge, Cambridge, UK </a><br>
+  <i class="fa fa-envelope" aria-hidden="true"></i> <a href = "mailto:aidan.m.starr@gmail.com"> aidan.m.starr@gmail.com </a><br>
   <!--<i class="fa fa-file-pdf-o" aria-hidden="true"></i> <a href="doc/cv.pdf" target="_blank">CV</a> <br>-->
   <i class="fa fa-google" aria-hidden="true"></i> <a href="https://scholar.google.com/citations?user=h0szf_4AAAAJ&hl=en&oi=ao" target="_blank">Scholar</a> <br>
   <i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/AidanStarr" target="_blank">GitHub</a> <br>
