--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <b>Dr. Aidan Starr</b><br>
   <font size=3.5>
   Climate & Data Science.<br>
-	Research Associate in Paleoceanography.<br>
+	Research Associate.<br>
 	<br>
     </p>
 		<hr>
@@ -33,7 +33,7 @@
 		<font size = 3.5>
 	<b>About me</b><br>
 	<font size = 2.5>
-	I am an interdisciplinary paleoclimate scientist who uses data science and analytical approaches to better understand the <b><span style="color: #CC3C00">trajectory of the Earth system</span></b> under different forcing conditions. I have authored or coauthored 6 peer-reviewed articles in world-leading journals (Nature, Science, etc.) and my research has been cited over 70 times.	<p>
+	I am an interdisciplinary climate scientist who uses data science and analytical approaches to better understand the <b><span style="color: #CC3C00">trajectory of the Earth system</span></b> under different forcing conditions. I have authored or coauthored 6 peer-reviewed articles in world-leading journals (Nature, Science, etc.) and my research has been cited over 130 times.	<p>
 <br>
 
 <hr>
