--- a/skills.html
+++ b/skills.html
@@ -41,7 +41,7 @@
 											<font size = 3.5>
 												<li> <img src="doc/matlab.png" height="20" display="flex"> <b> Matlab </b><br>
 													<font size = 2.5>
-														8+ years of Matlab experience. Used primarily for oceanography/hydrographic survey purposes as numerical simulations. I've used Matlab much less frequently since switching to Python for my daily analysis tool.
+														8+ years of Matlab experience. Used primarily for oceanography/hydrographic survey purposes and numerical simulations. I've used Matlab much less frequently since switching to Python for my daily analysis tool.
 													</li>
 													<br>
 													<font size = 3>
